--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <!-- 模態框 -->
+    <!-- 角色提示框 -->
     <div class="modal fade" id="roleModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <!-- 引入必要的函式庫 -->
+    <!-- 引入 GUN.js 用於即時數據同步 -->
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
